# NYC-Mobility-Geospatial-Lakehouse

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/geo/: nyc_boroughs.geojson
data/reference/: station_information.json
data/sample/: citibike_trips_sample.csv  station_information_sample.json  station_status_sample.json
db/init/: 01_schema.sql  02_load_boroughs.sql
docker/: api.Dockerfile  dashboard.Dockerfile  poller.Dockerfile
docs/: architecture.html
src/batch/: load_historical_trips.py
src/data_quality/: expectations.py
src/ingestion/: gbfs_poller.py
src/serving/: snapshot_writer.py
src/serving/api/: db.py  h3_aggregation.py  main.py  models.py
src/serving/api/routers/: h3.py  hotspots.py  stations.py
src/serving/dashboard/: app.py
src/streaming/: h3_config.py  h3_utils.py  hotspot_detection.py  spark_session.py  spatial_join.py  station_status_stream.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_expectations.py  test_gbfs_poller.py  test_h3_aggregation.py  test_h3_utils.py  test_hotspot_detection.py  test_load_historical_trips.py  test_snapshot_writer.py  test_spatial_join.py  test_station_status_stream.py
