[project]
name = "nyc-mobility-lakehouse"
version = "0.1.0"
description = "Real-time NYC Citi Bike mobility lakehouse: GBFS streaming ingestion, Spark+Sedona spatial enrichment, H3 hotspot detection, PostGIS/FastAPI serving, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31",
    "confluent-kafka>=2.3",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ingestion",
    "src/streaming",
    "src/batch",
    "src/serving",
    "src/data_quality",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
