[project]
name = "nyc-mobility-lakehouse"
version = "0.1.0"
description = "Real-time NYC Citi Bike mobility lakehouse: GBFS streaming ingestion, Spark+Sedona spatial enrichment, H3 hotspot detection, PostGIS/FastAPI serving, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31",
    "confluent-kafka>=2.3",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "apache-sedona==1.6.1",
    "h3>=4.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "deltalake>=0.18",
    "pandas>=2.2",
    "streamlit>=1.30",
    "pydeck>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ingestion",
    "src/streaming",
    "src/batch",
    "src/serving",
    "src/data_quality",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends(...) in argument defaults is the standard DI pattern.
extend-immutable-calls = ["fastapi.Depends"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
